--- a/apache-config/httpd.conf
+++ b/apache-config/httpd.conf
@@ -5,8 +5,9 @@ Listen 80
 LoadModule dir_module modules/mod_dir.so
 DirectoryIndex index.html
 
-<VirtualHost *:80>
+<VirtualHost test-server:80>
     DocumentRoot "/usr/local/apache2/htdocs"
+    ServerName test-server
     <Directory "/usr/local/apache2/htdocs">
         Options Indexes FollowSymLinks
         AllowOverride None
