Deploy new web-site

--- a/apache-config/httpd.conf
+++ b/apache-config/httpd.conf
@@ -5,9 +5,9 @@ Listen 80
 LoadModule dir_module modules/mod_dir.so
 DirectoryIndex index.html
 
-<VirtualHost test-server:80>
+<VirtualHost jenkins:80>
     DocumentRoot "/usr/local/apache2/htdocs"
-    ServerName test-server
+    ServerName jenkins
     <Directory "/usr/local/apache2/htdocs">
         Options Indexes FollowSymLinks
         AllowOverride None
