Deploy new web-site

--- a/apache-config/httpd.conf
+++ b/apache-config/httpd.conf
@@ -3,12 +3,8 @@ ServerRoot "/usr/local/apache2"
 Listen 80
 
 LoadModule dir_module modules/mod_dir.so
-# Load MPM module (choose one appropriate for your setup)
 LoadModule mpm_event_module modules/mod_mpm_event.so
-# or
-# LoadModule mpm_worker_module modules/mod_mpm_worker.so
-# or
-# LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+LoadModule authz_core_module modules/mod_authz_core.so
 DirectoryIndex index.html
 
 <VirtualHost jenkins:80>
