Deploy new web-site

--- a/apache-config/httpd.conf
+++ b/apache-config/httpd.conf
@@ -1,15 +1,15 @@
 # apache-config/httpd.conf
 ServerRoot "/usr/local/apache2"
 Listen 80
-
+ServerName localhost
 LoadModule dir_module modules/mod_dir.so
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule authz_core_module modules/mod_authz_core.so
 DirectoryIndex index.html
 
-<VirtualHost jenkins:80>
+<VirtualHost test-server:80>
     DocumentRoot "/usr/local/apache2/htdocs"
-    ServerName jenkins
+    ServerName test-server
     <Directory "/usr/local/apache2/htdocs">
         Options Indexes FollowSymLinks
         AllowOverride None
