Deploy new web-site

--- a/apache-config/httpd.conf
+++ b/apache-config/httpd.conf
@@ -5,6 +5,7 @@ ServerName localhost
 LoadModule dir_module modules/mod_dir.so
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule unixd_module modules/mod_unixd.so
 DirectoryIndex index.html
 
 <VirtualHost test-server:80>
